...

        <LinearLayout
            android:id="@+id/leftIconLayout"
            android:layout_width="50sp"
            android:layout_height="50sp"
...

            <ImageView
                android:id="@+id/toolbarbutton"
                android:layout_width="40sp"
                android:layout_height="40sp"
...

        <ImageView
            android:id="@+id/search"
            android:layout_width="40sp"
            android:layout_height="40sp"
...

                <RadioButton
                    android:id="@+id/radio_tv_series"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <RadioButton
                    android:id="@+id/radio_actors"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

        <EditText
            android:id="@+id/searchBarText2"
            android:layout_width="match_parent"
            android:layout_marginTop="10sp"
...

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/searchItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
...
        android:layout_height="wrap_content">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/body"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
...

                <ImageView
                    android:id="@+id/imageMovies1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
...

            <TextView
                android:id="@+id/moviesName1"
                android:layout_width="100sp"
                android:layout_height="wrap_content"
...

                <ImageView
                    android:id="@+id/imageMovies2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
...

            <TextView
                android:id="@+id/moviesName2"
                android:layout_width="100sp"
                android:layout_height="wrap_content"
...

                <ImageView
                    android:id="@+id/imageMovies3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
...

            <TextView
                android:id="@+id/moviesName3"
                android:layout_width="100sp"
                android:layout_height="wrap_content"
...

                <ImageView
                    android:id="@+id/imageTv1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
...

                <ImageView
                    android:id="@+id/imageTv2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
...

                <ImageView
                    android:id="@+id/imageTv3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
...

            <HorizontalScrollView
                android:id="@+id/horizontalScrollView"
                android:layout_width="match_parent"
                android:layout_height="170sp"
...

                            <ImageView
                                android:id="@+id/imageTrending2"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
...

            <HorizontalScrollView
                android:id="@+id/horizontalScrollView_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...
